# myCode

./: .gitignore  README.md  checklist.md  config.example.yaml  plan.md  pyproject.toml  spec.md  task.md
docs/: agent-code-review-recommendations.md  dedicated-tool-routing-issue.md  manual-eval-structured-prompts.md  permission-session-selection-and-import-cycle.md  terminal-input-retrospective.md  write-file-path-retry-retrospective.md
specs/context-management/: checklist.md  plan.md  spec.md  task.md
specs/session-memory/: checklist.md  plan.md  spec.md  task.md
src/mycode/: __init__.py  cli.py  config.py  instructions.py  types.py  (+2 more)
tests/: test_agent_collector.py  test_agent_executor.py  test_agent_runner.py  test_agent_tools.py  test_cli.py  test_config.py  test_context_estimator.py  test_context_integration.py  test_context_manager.py  test_context_storage.py  test_context_summary.py  test_instructions.py  test_mcp_integration.py  test_mcp_manager.py  test_mcp_tool.py  test_memory_parser.py  test_memory_secrets.py  test_memory_service.py  test_memory_storage.py  test_memory_worker.py  test_permissions_blacklist.py  test_permissions_config.py  test_permissions_rules.py  test_permissions_sandbox.py  test_permissions_service.py  test_prompts.py  test_providers.py  test_session.py  test_session_catalog.py  test_session_journal.py  test_session_loader.py  test_session_memory_integration.py  test_session_tools.py  test_sse.py  test_tool_descriptions.py  test_tool_executor.py  test_tool_streaming.py  test_tools_command.py  test_tools_files.py  test_tools_registry.py  (+1 more)
(+61 files in other folders)
