[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycode"
version = "0.1.0"
description = "Mycode command-line AI coding assistant MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mycode = "mycode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
